--- a/indexx.html
+++ b/indexx.html
@@ -81,78 +81,6 @@ cookieChoices = {};
 }
 </script>
 
-<!-- Mid Ads Banner-->
-<style>
-        .ad-banner {
-            display: block;
-            max-width: 100%;
-            height: auto;
-            text-align: center;
-            margin: 0 auto;
-        }
-
-        .ad-container {
-            width: 100%;
-            max-width: 728px;
-            margin: 10px auto;
-        }
-    </style>
-
-	
-<!--Footer Banner-->
-<style>
-
-        .footer-banner {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #f9f9f9;
-            border-top: 1px solid #ccc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-
-        .banner-content {
-            position: relative;
-            max-width: 728px;
-            height: 90px;
-        }
-
-        .banner-content a {
-            display: block;
-            width: 100%;
-            height: 100%;
-            text-decoration: none;
-        }
-
-        .close-btn {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            width: 20px;
-            height: 20px;
-            background-color: #ff5e5e;
-            color: #fff;
-            font-size: 16px;
-            font-weight: bold;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .close-btn:hover {
-            background-color: #e04e4e;
-        }
-    </style>
-
 	
 <style>
 
@@ -282,9 +210,9 @@ cookieChoices = {};
 
 	
 <!-- contenthere -->
-<p>Watch the live of this match in HD Quality, Scroll down to check out every links for Smooth Live Stream of this match.</p>
+<p>● Watch the live of this match in HD Quality, Scroll down to check out every links for Smooth Live Stream of this match.</p>
 
-<p>Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
+<p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
 
 
 
