--- a/indexx.html
+++ b/indexx.html
@@ -16,25 +16,13 @@
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 <title>YoSinTV: Cricket | Football Stream </title>
 <link href='//pagead2.googlesyndication.com' rel='dns-prefetch'/>
-<!-- HillTopADS Push  Ads
-<script>
-(function(rfjt){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = rfjt || {};
-s.src = "\/\/late-anxiety.com\/a\/W\/5IwNY.WxdolwQ-2j9\/kEZ\/Tr9Q6ybL2U5vlRS\/WEQV9\/NLDWY_4sNoTgUE3oMcy\/0A0UN_jsgU1ENcThc\/0P";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
+
+	
+	
+<!-- Center Pop Up Ads
+<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('naupsakiwhy.com',7496520,document.createElement('script'))</script>
 -->
 	
-	
-<!-- Center Pop Up Ads-->
-<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('naupsakiwhy.com',7496520,document.createElement('script'))</script>
-
 	
 <script type='text/javascript'> 
 var mivetimer ="";
