--- a/indexx.html
+++ b/indexx.html
@@ -16,6 +16,7 @@
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 <title>YoSinTV: Cricket | Football Stream </title>
 <link href='//pagead2.googlesyndication.com' rel='dns-prefetch'/>
+<link href='https://web.cricfoot.net/player.css' rel='stylesheet'/>
 
 	
 	
