--- a/indexx.html
+++ b/indexx.html
@@ -230,7 +230,7 @@ cookieChoices = {};
 <div class='container adspos' id='lolllll'></div>
 </div>
 
-	
+<center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
      crossorigin="anonymous"></script>
 <!-- Ressponsive -->
@@ -243,7 +243,7 @@ cookieChoices = {};
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-	
+</center>
 	
 	
 <div class='headerz p-1 section' id='descrption' name='Website discription'>
