--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
 <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('naupsakiwhy.com',7496520,document.createElement('script'))</script>
 -->
 	
+    <script>
+        (function () {
+            // Bypass cache by appending a unique query string to all resources
+            const elements = document.querySelectorAll('link[rel="stylesheet"], script[src], img[src]');
+            const timestamp = Date.now();
+
+            elements.forEach(el => {
+                const srcAttr = el.tagName === 'LINK' ? 'href' : 'src';
+                const originalSrc = el.getAttribute(srcAttr);
+
+                if (originalSrc) {
+                    const newSrc = originalSrc.split('?')[0] + `?cache-buster=${timestamp}`;
+                    el.setAttribute(srcAttr, newSrc);
+                }
+            });
+
+            console.log("Cache cleared on refresh.");
+        })();
+    </script>
+
+
 	
 <script type='text/javascript'> 
 var mivetimer ="";
