--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@ cookieChoices = {};
 <div class='widget-content'>
 
 	
-<div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Scroll Down &amp; Select Match Links !! </span></b></div> 
 
 
 
@@ -224,7 +223,8 @@ cookieChoices = {};
 <form><input class="MyButton" onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Live" /></form> 
 </center>
 
-  
+<div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Skip 1 Ads | Watch Peacefully </span></b></div> 
+
  
 <div id="live-container"></div>
 <script src="app.js"></script>
