--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <title>YoSinTV: Cricket | Football Stream </title>
 <link href='https://web.cricfoot.net/player.css' rel='stylesheet'/>
 
-	
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),
+'https://whacmoltibsay.net/tag.min.js',7463304,document.body||document.documentElement)</script>
+
+
 	
 <!-- Center Pop Up Ads
 <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('naupsakiwhy.com',7496520,document.createElement('script'))</script>
@@ -218,10 +221,11 @@ cookieChoices = {};
 </ul> 
 
 
-	
+<!--
 <center> 
 <form><input class="MyButton" onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Live" /></form> 
 </center>
+-->
 
 <div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Skip 1 Ads | Watch Peacefully </span></b></div> 
 
