--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@ cookieChoices = {};
 
 
 
-
+<center> 
 <ul>
 <li> 👉 <i><b> The match links are activated 15 minutes before kickoff. </b></i></li>
 <li> 👉 <i><b> Go to below links to get matches. </b></i></li>
 <li> 👉 <i><b> If the first link doesn’t work, go for the second or third link. </b></i></li>
 </ul> 
-
+</center>
 
 <!--
 <center> 
