--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ cookieChoices = {};
 
 
 <p>●  The match links are activated 15 minutes before kickoff. </p>
-<p>● The match links are activated 15 minutes before kickoff. </p>
+<p>●  Go to below links to get matches. </p>
 <p>● If the first link doesn’t work, go for the second or third link.  </p>
 
 	
