--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta content='' name='description'/>
 <link href='https://web.cricfoot.net/favico.png' rel='icon' type='image/x-icon'/>
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
-<title>YoSinTV: Cricket | Football Stream </title>
+<title> Hesgoal TV - Free Live Sports Stream  </title>
 <link href='https://web.cricfoot.net/player.css' rel='stylesheet'/>
 
 
