--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 <title> Hesgoal TV - Free Live Sports Stream  </title>
 <link href='https://web.cricfoot.net/player.css' rel='stylesheet'/>
-
+ <base href="https://yosintv2.github.io/ads/">
 
 	
 <!-- Center Pop Up Ads
