--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ cookieChoices = {};
 
  
 <div id="live-container"></div>
-<script src="app.js"></script>
+<script src="https://blog.cricfoot.net/app.js"></script>
  
 
       
