--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ cookieChoices = {};
 </center>
 -->
 
-<div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Skip 1 Ads | Watch Peacefully </span></b></div> 
+<!-- <div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Skip 1 Ads | Watch Peacefully </span></b></div>  -->
 
  
 <div id="live-container"></div>
