--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href='https://web.cricfoot.net/favico.png' rel='icon' type='image/x-icon'/>
 <link href='https://web.cricfoot.net/player.css' rel='stylesheet'/>
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
-<title> Hesgoal TV - Free Live Sports Stream  </title>
+<title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
 
 	
 <!-- Center Pop Up Ads
