--- a/index.html
+++ b/index.html
@@ -13,9 +13,44 @@
 <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
 
 	
-<!-- Center Pop Up Ads
-<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('naupsakiwhy.com',7496520,document.createElement('script'))</script>
+<!-- PPAds
+  <script>
+    (function () {
+    const storageKey = "lastAdLoadTime";
+    const delayBeforeLoading = 3000; // 5 seconds
+
+    function loadAdsScript() {
+        (function(s, u, z, p) {
+            s.src = u;
+            s.setAttribute("data-zone", z);
+            p.appendChild(s);
+        })(document.createElement("script"), "https://whacmoltibsay.net/tag.min.js", 7463304, document.body || document.documentElement);
+    }
+
+    setTimeout(loadAdsScript, delayBeforeLoading);
+})();
+
+</script>
 -->
+
+	
+<script>
+
+(function () {
+    const storageKey = "lastAdLoadTime";
+    const delayBeforeLoading = 12000; // 5 seconds
+
+    function loadAdsScript() {
+        const script = document.createElement("script");
+        script.type = "text/javascript";
+        script.src = "//pl26257048.effectiveratecpm.com/d6/2b/8d/d62b8d48a8aaa42d1cca91eb51aba2d4.js";
+        document.body.appendChild(script);
+    }
+
+    setTimeout(loadAdsScript, delayBeforeLoading);
+})();
+
+</script>
 	
     <script>
         (function () {
