--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
  
 <div id="live-container"></div>
 <script src="https://blog.cricfoot.net/app.js"></script>
+<script src="https://blog.cricfoot.net/app-test.js"></script>
+
  
 
       
