--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
  
 <div id="live-container"></div>
-<script src="https://blog.cricfoot.net/app.js"></script>
+<!--<script src="https://blog.cricfoot.net/app.js"></script>-->
 <script src="https://blog.cricfoot.net/app-test.js"></script>
 
  
