--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <script type='text/javascript' src='https://yosintv2.github.io/cdn/cdn.js'></script>
 <script async='async' nonce='d8pAqct-dNuDhxBnLYBAlQ' src='https://fundingchoicesmessages.google.com/i/pub-5525538810839147?ers=1'></script><script nonce='d8pAqct-dNuDhxBnLYBAlQ'>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
+<script>
+  window.googletag = window.googletag || {cmd: []};
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/22818991658/urlads2', [[250, 250], [336, 280], [200, 200], [300, 250], [320, 480], [480, 320]], 'div-gpt-ad-1744909293244-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script>
+
+	
 <head>
 <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
 <link href='https://web.cricfoot.net/favico.png' rel='icon' type='image/x-icon'/>
@@ -145,21 +156,14 @@
 <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
 
 
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
-     crossorigin="anonymous"></script>
-<!-- Ressponsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5525538810839147"
-     data-ad-slot="4345862479"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-
+<!-- /22818991658/urlads2 -->
+<center> 
+<div id='div-gpt-ad-1744909293244-0' style='min-width: 200px; min-height: 200px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1744909293244-0'); });
+  </script>
+</div>
+</center>
 
 
 <p>●  The match links are activated 15 minutes before kickoff. </p>
