--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
-    googletag.defineSlot('/22818991658/urlads2', [[250, 250], [336, 280], [200, 200], [300, 250], [320, 480], [480, 320]], 'div-gpt-ad-1744909293244-0').addService(googletag.pubads());
+    googletag.defineSlot('/22818991658/urlads2', [[480, 320], [320, 480]], 'div-gpt-ad-1744909771821-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
@@ -146,21 +146,17 @@
 <div class='widget-content'>
 
 	
-
-
-
-	
 <!-- contenthere -->
 <p>● Watch the live of this match in HD Quality, Scroll down to check out every links for Smooth Live Stream of this match.</p>
 
 <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
 
 
-<!-- /22818991658/urlads2 -->
 <center> 
-<div id='div-gpt-ad-1744909293244-0' style='min-width: 200px; min-height: 200px;'>
+<!-- /22818991658/urlads2 -->
+<div id='div-gpt-ad-1744909771821-0' style='min-width: 320px; min-height: 320px;'>
   <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1744909293244-0'); });
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1744909771821-0'); });
   </script>
 </div>
 </center>
