--- a/index.html
+++ b/index.html
@@ -5,16 +5,6 @@
 <script type='text/javascript' src='https://yosintv2.github.io/cdn/cdn.js'></script>
 <script async='async' nonce='d8pAqct-dNuDhxBnLYBAlQ' src='https://fundingchoicesmessages.google.com/i/pub-5525538810839147?ers=1'></script><script nonce='d8pAqct-dNuDhxBnLYBAlQ'>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
-<script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/22818991658/urlads2', [[480, 320], [320, 480]], 'div-gpt-ad-1744909771821-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
-
 	
 <head>
 <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
@@ -153,12 +143,14 @@
 
 
 <center> 
-<!-- /22818991658/urlads2 -->
-<div id='div-gpt-ad-1744909771821-0' style='min-width: 320px; min-height: 320px;'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1744909771821-0'); });
-  </script>
-</div>
+<!-- 320x480 ADS -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:480px"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="2611508741"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </center>
 
 
