--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
                                 </center>
 
 
-                                <p>● The match links are activated 15 minutes before kickoff. </p>
-                                <p>● Go to below links to get matches. </p>
-                                <p>● If the first link doesn’t work, go for the second or third link. </p>
+                                <p>● The links to watch the match turn on 15 minutes before the game starts.</p>
+                                <p>● Go to the links listed below to see the live game easily and have fun.</p>
+                                <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
+                                <p>● Check that your internet is fast and working well so you don’t miss any part of the game.</p>
 
                                 <center>
                                     <script type="text/javascript">
