--- a/index.html
+++ b/index.html
@@ -170,18 +170,46 @@
                                 <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
                                 <p>● Check that your internet is fast and working well so you don’t miss any part of the game.</p>
 
-                                <center>
-                                    <script type="text/javascript">
-                                        atOptions = {
-                                        		'key' : '404fc8f3cacfd3432bb75ca06f2afb48',
-                                        		'format' : 'iframe',
-                                        		'height' : 250,
-                                        		'width' : 300,
-                                        		'params' : {}
-                                        	};
-                                    </script>
-                                    <script type="text/javascript" src="//prosecutorremarkablegodforsaken.com/404fc8f3cacfd3432bb75ca06f2afb48/invoke.js"></script>
-                                </center>
+<!-- Mobile Only Ads-->
+<script>
+  if (window.innerWidth <= 767) {
+    document.write(`
+      <center>
+        <script type="text/javascript">
+          atOptions = {
+            'key': '404fc8f3cacfd3432bb75ca06f2afb48',
+            'format': 'iframe',
+            'height': 250,
+            'width': 300,
+            'params': {}
+          };
+        <\/script>
+        <script type="text/javascript" src="//prosecutorremarkablegodforsaken.com/404fc8f3cacfd3432bb75ca06f2afb48/invoke.js"><\/script>
+      </center>
+    `);
+  }
+</script>
+
+
+<!-- PC Only Ads-->
+  <script>
+  if (window.innerWidth > 767) {
+    document.write(`
+      <center>
+        <script type="text/javascript">
+          atOptions = {
+            'key' : '59fe9c4b56396dce66c5e0673b9721cf',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+          };
+        <\/script>
+        <script type="text/javascript" src="//prosecutorremarkablegodforsaken.com/59fe9c4b56396dce66c5e0673b9721cf/invoke.js"><\/script>
+      </center>
+    `);
+  }
+</script>
 
 
                                 <div id="live-container"></div>
