--- a/matches.html
+++ b/matches.html
@@ -21,10 +21,10 @@
             <!-- Matches will be inserted here dynamically -->
         </div>
     </div>
-    <script>
+   <script>
         async function loadMatches() {
             try {
-                const response = await fetch('matches.json');
+                const response = await fetch('https://blog.cricfoot.net/matches.json');
                 const data = await response.json();
                 const matchesContainer = document.getElementById('matches');
 
@@ -76,11 +76,10 @@
                     element.classList.add('blink', 'text-red-500');
                 } else {
                     const diff = matchTime - now;
-                    const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-                    const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                    const totalHours = Math.floor(diff / (1000 * 60 * 60));
                     const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
                     const seconds = Math.floor((diff % (1000 * 60)) / 1000);
-                    element.textContent = `${hours}h ${minutes}m ${seconds}s`;
+                    element.textContent = `${totalHours}h ${minutes}m ${seconds}s`;
                     element.classList.remove('blink', 'text-red-500', 'text-gray-500');
                     element.classList.add('text-blue-500');
                 }
