--- a/index.html
+++ b/index.html
@@ -156,13 +156,12 @@
                                 <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
 
 
-                                <center>
-                                    <!-- 320x480 ADS -->
-                                    <ins class="adsbygoogle" style="display:inline-block;width:320px;height:480px" data-ad-client="ca-pub-5525538810839147" data-ad-slot="2611508741"></ins>
-                                    <script>
-                                        (adsbygoogle = window.adsbygoogle || []).push({});
-                                    </script>
-                                </center>
+                    <!-- Ressponsive -->
+                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+
 
 
                                 <p>● The links to watch the match turn on 15 minutes before the game starts.</p>
