--- a/index.html
+++ b/index.html
@@ -170,22 +170,18 @@
                                 <p>● Check that your internet is fast and working well so you don’t miss any part of the game.</p>
 
 
-<script>
-    (function () {
-    const storageKey = "lastAdLoadTime";
-    const delayBeforeLoading = 5000; // 7 seconds
-	    
-    function loadAdsScript() {
-        (function(s, u, z, p) {
-            s.src = u;
-            s.setAttribute("data-zone", z);
-            p.appendChild(s);
-        })(document.createElement("script"), "https://whacmoltibsay.net/tag.min.js", 7463304, document.body || document.documentElement);
-    }
-
-    setTimeout(loadAdsScript, delayBeforeLoading);
-})();
-</script>
+<center>
+	<script type="text/javascript">
+            atOptions = {
+                'key' : '404fc8f3cacfd3432bb75ca06f2afb48',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//cornflowercigar.com/404fc8f3cacfd3432bb75ca06f2afb48/invoke.js"></script>
+</center>
 
                                 <div id="live-container"></div>
 
