--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <div class='alert alert-Alert' role='alert'>
 
 
+                                 <div id="live-tracker"></div>
 
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147" crossorigin="anonymous"></script>
                     <!-- Ressponsive -->
