--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
 
+				    <div><br/></div>
                 <div id="live-tracker"></div>
 
 
