--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <li class='sites telegram'><a aria-label='telegram' href='https://www.facebook.com/'><span class='icon telegram'></span>
 <span class='titll'></span>
 </a></li>
-                                <li class='sites youtube'><a aria-label='youtube' href='https://www.youtube.com/channel/UCxlTgCX3au3xsNN_lR-IRug/'><span class='icon youtube'></span>
+                                <li class='sites youtube'><a aria-label='youtube' href=' '><span class='icon youtube'></span>
 <span class='titll'></span>
 </a></li>
                             </div>
