--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
                                 <p>● Go to the links listed below to see the live game easily and have fun.</p>
                                 <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
                                 <p>● Check that your internet is fast and working well so you don’t miss any part of the game.</p>
+                                <p>● 📱|💻 = both Mobile & PC Working Links, 💻 = Best For PC Devices !! </p>
+
 
 
 <div id="live-container"></div>
