--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport' />
     <link href='https://web.cricfoot.net/favico.png' rel='icon' type='image/x-icon' />
     <link href='https://web.cricfoot.net/player.css' rel='stylesheet' />
-    <link href='https://web.cricfoot.net/main.css' rel='stylesheet' />
+    <link href='https:/blog.cricfoot.net/main.css' rel='stylesheet' />
     <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
 </head>
 <body class='index theme2'>
